--- a/src/app/colleges/university-thindivanam/university-thindivanam.component.html
+++ b/src/app/colleges/university-thindivanam/university-thindivanam.component.html
@@ -5,48 +5,7 @@
     </div>
     <div class="details-container pt-3">
         <div *ngIf="toggleStyle" class="cont-navbar">
-            <table>
-                <tr class="active">
-                    <td class="table1">Notification 1
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 2
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 3
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 4
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 5
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 6
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 7
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 8
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 9
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 10
-                    </td>
-                </tr>
-            </table>
+            <app-sidebar></app-sidebar>
         </div>
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
