--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -11,48 +11,7 @@
     <div class="details-container pt-3">
 
         <div *ngIf="toggleStyle" class="cont-navbar">
-            <table>
-                <tr class="active">
-                    <td class="table1">GO NUMBER 2020_15-11-2021
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 2
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 3
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 4
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 5
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 6
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 7
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 8
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 9
-                    </td>
-                </tr>
-                <tr>
-                    <td class="table1">Notification 10
-                    </td>
-                </tr>
-            </table>
+            <app-sidebar></app-sidebar>
         </div>
 
 
