reseting page start

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
     <img style="height: 120px; width: 150px;" src="assets/logo.png" alt="">
   </div>
   <div class="head">
-    <p id="title" style="font-size: 2rem;color: beige; font-weight: bold;">DIRECTORATE OF TECHNICAL EDUCATION</p>
-    <p id="sub-title" style="font-size: 1.5rem; color: beige; font-weight: 500;">GOVERNMENT OF TAMILNADU</p>
+    <p id="title" style="font-size: 2rem;color: black; font-weight: bold; font-family: 'Akaya Telivigala', cursive;">
+      DIRECTORATE OF TECHNICAL EDUCATION</p>
+    <p id="sub-title"
+      style="font-size: 1.5rem; color: black; font-weight: 500; font-family: 'Akaya Telivigala', cursive;">GOVERNMENT OF
+      TAMILNADU</p>
   </div>
 </header>
 
@@ -27,23 +30,23 @@
 
 <footer id="head-02">
   <div class="head-02">
-    <p style="font-size: 1.3rem;color: beige">
+    <p style="font-size: 1.3rem;color: #000">
       For any queries - contact us
     </p>
-    <p style="font-size: 1.3rem;color: beige">
+    <p style="font-size: 1.3rem;color: #000">
       E-mail : gcesalem.edu@gmail.com
     </p>
     <div class="mobile-rows">
       <div class="mobile-rows-01">
-        <i class="fa fa-mobile" style="font-size: 40px; color: beige;"></i>
+        <i class="fa fa-mobile" style="font-size: 40px; color: #000;"></i>
       </div>
-      <div class="mobile-rows-02" style="color: beige">- 1234567890</div>
+      <div class="mobile-rows-02" style="color: #000">- 1234567890</div>
     </div>
     <div class="mobile-rows">
       <div class="mobile-rows-01">
-        <i class="fa fa-mobile" style="font-size: 40px; color: beige;"></i>
+        <i class="fa fa-mobile" style="font-size: 40px; color: #000;"></i>
       </div>
-      <div class="mobile-rows-02" style="color: beige;">- 1234567890</div>
+      <div class="mobile-rows-02" style="color: #000;">- 1234567890</div>
     </div>
   </div>
 </footer>
