--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,10 @@
     width: 100%;
     height: 150px;
     /* background: #1b2e51; */
-    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    /* background: linear-gradient(to bottom,#599de0,#37DCF2); */
+    background: url(../assets/nav-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -27,7 +30,9 @@
                             /* Footer */
 #head-02{
     width: 100%;
-    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    background: url(../assets/nav-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
