--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -10,7 +10,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Government college of Engineering and Technology, (Autonomous), Salem-636011
+                    {{title}}
                 </div>
             </div>
             <br>
@@ -88,4 +88,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-details-form *ngIf="Next" [titles]="title"></app-details-form>
