--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,15 +3,17 @@
 <div
     *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !ceg_guindy && !cit_coimbatore && !gce_bargur && !gce_erode && !gce_salem && !gce_thirunelveli && !gct_coimabatore && !mit_chennai && !periyar_vellor && !psg_coimbatore && !thiagarajar_madurai && !university_ariyalur && !university_dindigul && !university_kanchepuram  && !university_nagercoil && !university_panruti  && !university_pattukodai && !university_ramanathapuram && !university_thiruchirappali  && !university_thirukkuvalai && !university_thiruvannamalai && !university_thoothukudi && !university_villupuram">
 
-    <div class="portal-container" style="width: 100%; text-align: center;">
-        <marquee behavior="alternate" style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate
+    <div class="portal-container mt-3" style="width: 100%;  height: inherit; text-align: center;">
+        <marquee behavior="alternate" style=" font-size: 30px;height: inherit; color: green; font-weight: 600;">Online
+            Post
+            Graduate
             Assistantship and Non-Gate PG
             Scholars
             2021-2022
             (User Portal)
         </marquee>
 
-        <p style="font-size:19px; color: red;">
+        <p class="mt-2" style="font-size:19px; color: red;">
             *** Students are not allowed to enter details themselves. Only College authority is allowed to Login and
             enter
             details ***
