--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -8,8 +8,8 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="cont-rows">
-            <div class="college" style="text-align: center;">
-                <div class="college-name">
+            <div class="college mt-5" style="text-align: center;">
+                <div class="college-name" style="height: 50px; width: 100%;">
                     {{title}}
                 </div>
             </div>
@@ -54,17 +54,17 @@
             <div class="college-cont" style="text-align: center;">
                 <table class=" table-borderless">
                     <tbody>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">Chairman</td>
                             <td id="tab-2">:</td>
                             <td id="tab-3"></td>
                         </tr>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">Principle Name</td>
                             <td id="tab-2">:</td>
                             <td id="tab-3">Dr.Malayalamuruthi (Phno : 9443441416)</td>
                         </tr>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
                             <td id="tab-3">0427-2346102 </td>
