--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -8,7 +8,7 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="cont-rows">
-            <div class="college mt-5" style="text-align: center;">
+            <div class="college" style="text-align: center;">
                 <div class="college-name" style="height: 50px; width: 100%;">
                     {{title}}
                 </div>
@@ -17,7 +17,7 @@
             <br>
 
             <div style="text-align: center;">
-                <table class=" table-borderless">
+                <table class=" table-borderless mt-3">
                     <tbody>
                         <tr>
                             <td id="tab-1">Taluk</td>
