--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -88,4 +88,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next" [titles]="title"></app-details-form>
+<app-details-form *ngIf="Next" [courses]="courses" [titles]="title"></app-details-form>
