--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,15 +13,15 @@
       TAMILNADU</p>
   </div>
 </header>
-
+<!-- <app-navbar></app-navbar> -->
 
 <!-- <router-outlet></router-outlet> -->
 
 
 <!-- <app-forgot-password></app-forgot-password> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <!-- <app-sidebar></app-sidebar> -->
-<!-- <app-details-form></app-details-form> -->
+<app-details-form></app-details-form>
 <!-- <app-college-name></app-college-name> -->
 <!-- <app-view-form></app-view-form> -->
 
