--- a/src/app/view-form/view-form.component.html
+++ b/src/app/view-form/view-form.component.html
@@ -1,7 +1,81 @@
 <div class="container">
     <div class="rows mt-4" style="text-align: center;">
         <p class="mt-1" style="font-size: 35px;">Students Details</p>
-        <div class="mt-3 ">
+
+        <table class="mt-3 view_table border" id="excel-table">
+            <div class="">
+
+            </div>
+            <tr>
+                <th class="col-sm-4 col-form-label" id="input">Year of Student </th>
+                <th class="col-sm-4 col-form-label" id="input">Name of the Course </th>
+                <th class="col-sm-4 col-form-label" id="input">Name of the Branch </th>
+                <th class="col-sm-4 col-form-label" id="input"> Student Name </th>
+                <th class="col-sm-4 col-form-label" id="input">Communal Category </th>
+                <th class="col-sm-4 col-form-label" id="input"> Community Admitted </th>
+                <th class="col-sm-4 col-form-label" id="input"> Entry Mode </th>
+                <th class="col-sm-4 col-form-label" id="input"> Tancet Score </th>
+                <th class="col-sm-4 col-form-label" id="input"> History of Arrears </th>
+                <th class="col-sm-4 col-form-label" id="input"> Lack of Attendace </th>
+                <th class="col-sm-4 col-form-label" id="input"> Account No </th>
+                <th class="col-sm-4 col-form-label" id="input"> Bank Name </th>
+                <th class="col-sm-4 col-form-label" id="input"> IFSC Code </th>
+            </tr>
+            <tr *ngFor="let data of datas">
+                <td>
+                    {{data.year}}
+                </td>
+                <td>
+                    {{data.course}}
+                </td>
+                <td>
+                    {{data.branch}}
+                </td>
+                <td>
+                    {{data.name}}
+                </td>
+                <td>
+                    {{data.communal_category}}
+                </td>
+                <td>
+                    {{data.community_category}}
+                </td>
+                <td>
+                    {{data.entry_mode}}
+                </td>
+                <td>
+                    {{data.tancet}}
+                </td>
+                <td>
+                    {{data.arrear}}
+                </td>
+                <td>
+                    {{data.attendance}}
+                </td>
+                <td>
+                    {{data.bank}}
+                </td>
+                <td>
+                    {{data.ifsc}}
+                </td>
+                <td>
+                    {{ifsc_code}}
+                </td>
+                <td>
+                    {{data.contanct}}
+                </td>
+                <td>
+                    {{data.email}}
+                </td>
+            </tr>
+
+        </table>
+        <button class="btn btn-outline-primary " (click)="printout()">Print</button>
+    </div>
+</div>
+
+
+<!-- <div class="mt-3 ">
             <div class="">
 
             </div>
@@ -103,74 +177,4 @@
                     <input type="text" class="form-control" value="{{ifsc_code}}" readonly>
                 </div>
             </div>
-        </div>
-        <table class="mt-3 view_table " id="excel-table">
-            <div class="">
-
-            </div>
-            <tr>
-                <th for="inputPassword" class="col-sm-4 col-form-label">College </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label">Year of Student </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Course </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Branch </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Student Name </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label">Communal Category </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Community Admitted </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Entry Mode </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Tancet Score </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Lack of Attendace </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Account No </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Bank Name </th>
-                <th for="inputPassword" class="col-sm-4 col-form-label"> IFSC Code </th>
-            </tr>
-            <tr>
-                <td>
-                    {{college}}
-                </td>
-                <td>
-                    {{Year_of_student}}
-                </td>
-                <td>
-                    {{name1}}
-                </td>
-                <td>
-                    {{branch}}
-                </td>
-                <td>
-                    {{Stud_name}}
-                </td>
-                <td>
-                    {{Communa_lCategory}}
-                </td>
-                <td>
-                    {{Community_Admitted}}
-                </td>
-                <td>
-                    {{Entry_Mode}}
-                </td>
-                <td>
-                    {{tancet}}
-                </td>
-                <td>
-                    {{history_arrear}}
-                </td>
-                <td>
-                    {{lack_attentance}}
-                </td>
-                <td>
-                    {{account_no}}
-                </td>
-                <td>
-                    {{bank_name}}
-                </td>
-                <td>
-                    {{ifsc_code}}
-                </td>
-
-            </tr>
-
-        </table>
-        <button class="btn btn-outline-primary " (click)="printout()">Print</button>
-    </div>
-</div>
+        </div> -->
