--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -88,4 +88,5 @@
 </div>
 
 
-<app-details-form *ngIf="Next" [courses]="courses" [titles]="title"></app-details-form>
+<app-gce-salem-details *ngIf="Next"></app-gce-salem-details>
+<!-- [courses]="courses" [titles]="title" -->
