--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,11 @@
 
 
 <!-- <app-forgot-password></app-forgot-password> -->
-<!-- <app-login></app-login> -->
+<app-login></app-login>
+<!-- <app-gce-salem></app-gce-salem> -->
+<!-- <app-gce-salem-viewform></app-gce-salem-viewform> -->
 <!-- <app-sidebar></app-sidebar> -->
-<app-details-form></app-details-form>
+<!-- <app-details-form></app-details-form> -->
 <!-- <app-college-name></app-college-name> -->
 <!-- <app-view-form></app-view-form> -->
 
