--- a/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
+++ b/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div class="rows mt-4" style="text-align: center;">
         <p class="mt-1" style="font-size: 35px;">Students Details</p>
 
@@ -11,18 +11,21 @@
                 <th class="col-sm-4 col-form-label" id="input">Year of Study</th>
                 <th class="col-sm-4 col-form-label" id="input">Semester </th>
                 <th class="col-sm-4 col-form-label" id="input">Name of Branch </th>
-                <th class="col-sm-4 col-form-label" id="input"> </th>
-                <th class="col-sm-4 col-form-label" id="input"> Community Admitted </th>
-                <th class="col-sm-4 col-form-label" id="input"> Entry Mode </th>
-                <th class="col-sm-4 col-form-label" id="input"> Tancet Score </th>
-                <th class="col-sm-4 col-form-label" id="input"> History of Arrears </th>
-                <th class="col-sm-4 col-form-label" id="input"> Lack of Attendace </th>
-                <th class="col-sm-4 col-form-label" id="input"> Account No </th>
-                <th class="col-sm-4 col-form-label" id="input"> Bank Name </th>
-                <th class="col-sm-4 col-form-label" id="input"> IFSC Code </th>
-                <th class="col-sm-4 col-form-label" id="input"> IFSC Code </th>
-                <th class="col-sm-4 col-form-label" id="input"> IFSC Code </th>
-                <th class="col-sm-4 col-form-label" id="input"> IFSC Code </th>
+                <th class="col-sm-4 col-form-label" id="input">Name of the Course </th>
+                <th class="col-sm-4 col-form-label" id="input"> Name of Student </th>
+                <th class="col-sm-4 col-form-label" id="input"> Community of Student was admitted </th>
+                <th class="col-sm-4 col-form-label" id="input"> Coummunity of the Student </th>
+                <th class="col-sm-4 col-form-label" id="input"> Entry Mode</th>
+                <th class="col-sm-4 col-form-label" id="input"> Tancet Score</th>
+                <th class="col-sm-4 col-form-label" id="input"> Account No</th>
+                <th class="col-sm-4 col-form-label" id="input"> Bank Name</th>
+                <th class="col-sm-4 col-form-label" id="input"> IFSC code </th>
+                <th class="col-sm-4 col-form-label" id="input"> Contact Number</th>
+                <th class="col-sm-4 col-form-label" id="input"> Email id</th>
+                <th class="col-sm-4 col-form-label" id="input"> Any Arrears </th>
+                <th class="col-sm-4 col-form-label" id="input"> Lack of Attendance</th>
+                <th class="col-sm-4 col-form-label" id="input"> Remarks</th>
+
             </tr>
             <tr *ngFor="let data of datas">
                 <td>
